Rename Assignment.html to index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -350,4 +350,6 @@
     </div>
   </footer>
 </body>
-</html>
+</html>git mv Assignment.html index.html
+git commit -m "Rename Assignment.html to index.html for GitHub Pages"
+git push origin main
